Fix spacing between image and user prompt field

--- a/projects/plugins/jetpack/extensions/plugins/ai-assistant-plugin/components/featured-image/style.scss
+++ b/projects/plugins/jetpack/extensions/plugins/ai-assistant-plugin/components/featured-image/style.scss
@@ -56,6 +56,7 @@
 
 	&__image-canvas {
 		width: 100%;
+		margin-top: 24px;
 		& > .jetpack-ai-upgrade-banner {
 			margin-bottom: 8px;
 		}
